true-native-api/kubernetes/stage/k8s-deployments.yaml
###################################
# delivery-together-post-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: true-native-api
  labels:
    app: true-native-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: true-native-api
  template:
    metadata:
      labels:
        app: true-native-api
    spec:
      containers:
        - name: true-native-api
          image: ghcr.io/misw-4301-desarrollo-apps-en-la-nube/true-native:2.0.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: true-native-service
  annotations:
    cloud.google.com/backend-config: '{"default": "true-native-config"}'
spec:
  type: NodePort
  selector:
    app: true-native-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 31000
