true-native-api/kubernetes/stage/k8s-ingress.yaml
###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: true-native-ingress
  labels:
    name: true-native-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /native
        backend:
          service:
            name: true-native-service
            port: 
              number: 80
